packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-10/reproducer.js
const elements = [undefined]
const offset = 'off';
function bar () {};

elements.forEach((element, index) => {
	if (offset === "off") {
		foo(element); // element might be null/undefined
	}
	if (index === 0 || !element) {
		return;
	}
	otherLogic(element);
});

function foo(token) {
	return bar(token.loc.start.line); // Noncompliant: token might be undefined
}
